# diplom-rag-agent

./: README.md  app_config.py  embedding.py  langgraph_state_nodes.py  logger_config.py  main.py  pg_vector_helpers.py  pyproject.toml  timer.py
.index/chroma_docs/03eb1fee-9a47-4428-ba68-72bbb093bf6c/: index_metadata.pickle
data/docs/: OWASP_Agentic_AI_Top_10.md  These4ThreatstoAIApplicationsRequireNewCybersecurityStrategies.md  aardvark_агент_аналитик_по_информационной_безопасности_от_open_ai.md  comet_jacking_attack.md  grishenko.pptx  melnikov.pptx  menisov.pptx
