[project]
name = "agent-rag-diplom"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.4.0",
    "ddgs>=9.10.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.6",
    "langchain-postgres>=0.0.16",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.5",
    "pypdf>=6.5.0",
    "python-pptx>=1.0.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.0",
    "unstructured>=0.18.21",
]
